[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/elements/options/fontoption.gd" type="Script" id=1]
[ext_resource path="res://ui/elements/options/baseoption.tscn" type="PackedScene" id=2]

[node name="FontOption" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseOption" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="Label" parent="BaseOption/HBoxContainer" index="0"]
margin_right = 638.0

[node name="HBoxContainer" type="HBoxContainer" parent="BaseOption/HBoxContainer" index="1"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 700.0
size_flags_horizontal = 3

[node name="FontStatusLabel" type="Label" parent="BaseOption/HBoxContainer/HBoxContainer"]
margin_top = 343.0
margin_right = 571.0
margin_bottom = 357.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Please select a font ->"

[node name="FontSelectButton" type="Button" parent="BaseOption/HBoxContainer/HBoxContainer"]
margin_left = 575.0
margin_right = 638.0
margin_bottom = 700.0
text = "Select..."
[connection signal="pressed" from="BaseOption/HBoxContainer/HBoxContainer/FontSelectButton" to="." method="_on_FontSelectButton_pressed"]

[editable path="BaseOption"]
